--- a/sass/chosen.scss
+++ b/sass/chosen.scss
@@ -18,6 +18,10 @@ $chosen-selected-color: #e0e0e0;
 	font-size: 14px;
 	user-select: none;
 
+	&:focus {
+		outline: none;
+	}
+
 	* {
 		box-sizing: border-box;
 	}
